<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/station_a"
                android:id="@+id/gas_station_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/board_price"
                android:layout_below="@+id/gas_station_a"
                android:layout_alignParentStart="true" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$"
                    android:id="@+id/board_price_dollar_sign"
                    android:textSize="30sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0.00"
                    android:textSize="30sp"
                    android:layout_toEndOf="@+id/board_price_dollar_sign"
                    android:id="@+id/board_price_text"
                    android:inputType="numberDecimal"
                    android:maxLength="4"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/extra_fees" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$"
                    android:id="@+id/extra_fees_dollar_sign"
                    android:textSize="30sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0.00"
                    android:textSize="30sp"
                    android:layout_toEndOf="@+id/extra_fees_dollar_sign"
                    android:id="@+id/extra_fees_text"
                    android:inputType="numberDecimal"
                    android:maxLength="4"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cashback"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cashback_spinner"
                    android:entries="@array/cashback_array"/>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:text="@string/total_cost"
            android:layout_gravity="center"
            android:layout_below="@id/linearLayout"
            android:layout_centerHorizontal="true"
            android:id="@+id/label_cost"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="$32.20"
            android:id="@+id/total_cost"
            android:layout_below="@+id/label_cost"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>


